text sample update

--- a/public/preferences.html
+++ b/public/preferences.html
@@ -77,7 +77,7 @@
             
             <div class="input-group">
               <input type="text" id="city" name="city" required placeholder=" " />
-              <label for="city">City (e.g. Lagos)</label>
+              <label for="city">City (e.g. Marbella)</label>
             </div>
 
             <div class="input-row">
